# Food-ordering-service-using-kafka

./: .gitignore  README.md  docker-compose.yaml  producer.py  pyproject.toml  tracker.py
